[package]
name = "rand_dev"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

description = "Reproducible randomness source for tests"
categories = ["development-tools", "development-tools::debugging", "development-tools::testing"]
keywords = ["tests", "reproducibility", "rand"]
repository = "https://github.com/survived/rand_dev"

[dependencies]
rand_core = { version = "0.6", features = ["std"] }
rand_chacha = "0.3"
hex = "0.4"

# We specify this dependency purely to resolve a link for `cargo doc --feature __docs`
rand = { version = "0.8", optional = true }

[features]
default = []
__docs = ["rand"]

[package.metadata.docs.rs]
features = ["__docs"]
