[package]
name = "rand_dev"
version = "0.2.0"
license = "MIT OR Apache-2.0"
edition = "2024"

description = "Reproducible randomness source for tests"
categories = ["development-tools", "development-tools::debugging", "development-tools::testing"]
keywords = ["tests", "reproducibility", "rand"]
repository = "https://github.com/survived/rand_dev"

[dependencies]
rand_core = { version = "0.9", features = ["os_rng"] }
rand_chacha = "0.9"
getrandom = { version = "0.3", default-features = false }
const-hex = { version = "1", default-features = false, features = ["alloc"] }

[dev-dependencies]
rand = "0.9"

[features]
default = []

